Revision history for Perl extension IPC::System::Simple.

0.15


0.14  Sat Jul 19 00:26:01 AEST 2008
        - We should now recognise "not implemented on this architecture"
          POSIX errors from Perl 5.11.0
        - Fixed an invalid specification of resources in META.yml.

0.13  Thu Jul 17 20:36:42 AEST 2008
        - Added examples directory with examples.
        - Updated manifest to include error message regession tests.
        - Test::Kwalitee is now marked as an author-only test.
        - Added tests for correct handling of 32-bit values in
          win32.t.  Corrected documentation regarding Win32 exitval
          size.  Thanks to Jan Dubois for alerting me to the 32-bitness
          of Windows exit values.
        - Added tests to ensure that newlines are properly stripped
          with single-arg system and capture.
        - Pod and Pod Coverage tests are now marked as author-only.
        - Added perl core identical rules for determining the Windows
          shell.
        - Added META.yml resources, including blog, bugtracker,
          forum, and repository.
        - Additional tests to ensure returns from capture() are
          properly tainted (when running in taint mode).
        - Added systemx() and capturex() that _never_ invoke the
          shell.   Thanks to ikegami for prodding me on these.
          (RT #37683)

0.12  Fri Jun  6 17:15:52 AEST 2008
        - Corrected doubled package names in some diagnostics
          when used in taint mode, or when run() is called without
          arguments.

0.11  Fri Jun  6 12:15:39 AEST 2008
        - Drop-in system() replacement available.
        - Simplified synopsis statement.
        - Provided advanced usage documentation.
        - Added comparison to other system APIs.
        - Updated Changes to put most recent changes at top.
        - Makefile.PL tweaks to build cleanly under Debian's dh-make-perl.
        - Upgraded to Module::Install 0.75 with custom bugfixes.
